--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,149 @@
-.App {
-  text-align: center;
+.title {
+  font-size: 9px;
+}
+.btn {
+  font-size: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image {
+  width: 120px;
+  height: 120px;
+  color: #808080;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.overlay-text {
+  font-size: 25px;
+  color: azure;
+}
+
+.card:hover .image {
+  opacity: 0;
+}
+
+.card:hover .overlay-text {
+  display: block;
+}
+
+#product_card {
+  .product_card_head {
+    background: linear-gradient(360deg, transparent, rgba(27, 26, 26, 0.7));
+  }
+}
+#product_card {
+  .product_card_footer {
+    background: linear-gradient(180deg, transparent, rgba(27, 26, 26, 0.5));
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main {
+  padding-bottom: 75px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.collection_card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  border-radius: inherit;
+  transition: background-color;
+  background-color: transparent;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.collection_card:hover::before {
+  background-color: var(--hover-bg-color, transparent);
+  opacity: 0.4;
+}
+.buynow-button {
+  display: none;
+}
+
+.collection_card:hover .buynow-button {
+  display: block;
+  background-color: #fff;
+  color: #000;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.buynow-label {
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+}
+.footer_bg {
+  background-color: rgb(95, 91, 88);
+}
+.footer_bg2 {
+  background-color: rgb(44, 44, 44);
+}
+.footer_bg3 {
+  background-color: rgb(187, 0, 0);
+}
+
+.allItems {
+  height: 150px;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.3s ease-out;
+  right: 75%;
+  width: 150px;
+  z-index: 0;
+  background-color: #000;
+  border-radius: 16px;
+  cursor: pointer;
+
+}
+
+.allItems_1 {
+  left: 25%;
+  transform: translateX(-60%);
+  width: 300px;
+  height: 300px;
+}
+
+.allItems_2 {
+  left: 35%;
+  transform: translateX(-50%);
+}
+
+.allItems_3 {
+  height: 340px;
+  opacity: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 340px;
+  z-index: 2;
+}
+
+.allItems_4 {
+  left: 65%;
+  transform: translateX(-50%);
+}
+
+.allItems_5 {
+  left: 75%;
+  transform: translateX(-40%);
+  height: 300px;
+  width: 300px;
+}
+
+.allItems_2,
+.allItems_4 {
+  height: 320px;
+  opacity: 1;
+  width: 320px;
+  z-index: 1;
+}
+.allItems_1,
+.allItems_2,
+.allItems_3,
+.allItems_4,
+.allItems_5 {
+  opacity: 1;
 }
